; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_file.c_linkFile.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_file.c_linkFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [67 x i8] c"error while creating link for relation \22%s.%s\22 (\22%s\22 to \22%s\22): %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linkFile(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i64 @pg_link_file(i8* %9, i8* %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %4
  %14 = load i8*, i8** %7, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* @errno, align 4
  %19 = call i32 @strerror(i32 %18)
  %20 = call i32 @pg_fatal(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0), i8* %14, i8* %15, i8* %16, i8* %17, i32 %19)
  br label %21

21:                                               ; preds = %13, %4
  ret void
}

declare dso_local i64 @pg_link_file(i8*, i8*) #1

declare dso_local i32 @pg_fatal(i8*, i8*, i8*, i8*, i8*, i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
